--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,9 @@
 os: linux
 dist: xenial
 
-before_install:
-  - export BAZEL_VERSION=$( git ls-remote --tags --refs --sort="v:refname" https://github.com/bazelbuild/bazel.git | tail -n1 | sed 's/.*\///' )
-
 install:
-  - wget https://github.com/bazelbuild/bazel/releases/download/${BAZEL_VERSION}/bazel-${BAZEL_VERSION}-installer-linux-x86_64.sh
-  - chmod u+x bazel*.sh
-  - sudo ./bazel*.sh
+  - chmod u+x ./*sh
+  - ./install-bazel.sh
   
 script:
   - echo OK
